packages/kit/test/apps/basics/src/routes/load/invalidation/search-params/universal/+page.js
let count = 0;

/** @type {import("./$types").PageLoad} */
export function load({ url }) {
	url.searchParams.get('a');
	return {
		count: count++
	};
}
